exploit prior knowledge

--- a/link_adaptation.ipynb
+++ b/link_adaptation.ipynb
@@ -331,11 +331,11 @@
     "    dts_rates, dts_acks, dts_tputs = run_experiment_for_agent(dts_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "\n",
     "    # Upper Confidence Bound (UCB1)\n",
-    "    ucb_bandit = UCB1Bandit(nrof_rates, nrof_cqi, packet_sizes)\n",
+    "    ucb_bandit = UCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi)\n",
     "    ucb1_rates, ucb1_acks, ucb1_tputs = run_experiment_for_agent(ucb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "    \n",
     "    # Discounted UCB (D-UCB) is buggy\n",
-    "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, gamma=0.9999)\n",
+    "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi, gamma=0.9999)\n",
     "    ducb_rates, ducb_acks, ducb_tputs = run_experiment_for_agent(ducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "\n",
     "    # Variable Discounted UCB (VD-UCB)\n",
@@ -366,16 +366,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/calvin/GitHub/Link-Adaptation/src/link_adaptation_agents.py:364: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  estimate_success_prob = [self.ack_count[rate_index, cqi] /\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RAY: The following line runs the Ray-packaged method. To avoid using Ray, comment out the next line and uncomment\n",
     "# the line that immediately follows it in order to run the experiments.\n",
